<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">地铁2048</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="score">分数</string>
    <string name="bestscore">最高分</string>
    <string name="newgame">重新开始</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="toast_exit">再按一次返回键，退出程序</string>
    <string name="setting_picture_title">设置保存文件的分辨率</string>
    <string name="setting_picture_content">480X320</string>
    <string name="setting_preview_title">设置预览分辨率</string>
    <string name="setting_preview_content">480X320</string>
    <string name="setting_path_title">设置保存路径</string>
    <string name="setting_path_content">sd//</string>
    <string name="setting_title">设置</string>
    <string name="file_explore_title">设置图片路径</string>
    <string name="setting_photo_title">查看相册</string>
    <string name="setting_photo_content">需要密码查看</string>
    <string name="setting_camera_enable_title">设置启动特殊模式</string>
    <string name="setting_enable_content">当前已启动</string>
    <string name="setting_2048_super_title">设置启动超级模式</string>
    <string name="setting_disenable_content">当前未启动</string>
    <string name="dialog_title">创建图片路径</string>
    <string name="dialog_message">请输入文件夹名称</string>
    <string name="dialog_password">请输入密码</string>
    <string name="dialog_repassword">请输入确认密码</string>
    <string name="dialog_sure">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_title_create">设置密码</string>
    <string name="dialog_title_check">登陆相册</string>
    <string name="toast_password_not_null">输入密码为空</string>
    <string name="toast_repassword_not_null">确认密码不能为空</string>
    <string name="toast_passwords_not_equal">两次密码不正确</string>
    <string name="toast_password_error">密码输入错误</string>
    <string name="album_title">相册</string>
    <string name="big_photo_title">图片详情</string>
    <string name="title_activity_protocol">ProtocolActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>

</resources>
