<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text_title"
        android:text="@string/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_dialog_alert"
        android:gravity="center_vertical|left"
        android:textColor="@color/white"
        android:textSize="25sp" />

<!--     <TextView
        android:id="@+id/text_message"
        android:text="@string/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="20sp" /> -->

    <EditText
        android:id="@+id/edit_name"
        android:hint="@string/dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/btn_sure"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/dialog_sure" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_margin="5dp"
            android:text="@string/dialog_cancel" />
    </LinearLayout>

</LinearLayout>