<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/title_background" >

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/setting_button_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/setting_title"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </RelativeLayout>

        
        <!-- 设置 filesize -->
        <RelativeLayout
            android:id="@+id/layout_file_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setting_margin"
            android:background="@drawable/setting_button_top" >

            <LinearLayout
                style="@style/setting_item_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/setting_text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_picture_title" />

                <TextView
                    android:id="@+id/text_picture_size"
                    style="@style/setting_text_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_picture_content" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@drawable/preference_right" />
        </RelativeLayout>

        <!-- 设置 preview size -->

        <RelativeLayout
            android:id="@+id/layout_preview_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_button_mid" >

            <LinearLayout
                style="@style/setting_item_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/setting_text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_preview_title" />

                <TextView
                    android:id="@+id/text_preview_size"
                    style="@style/setting_text_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_preview_content" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@drawable/preference_right" />
        </RelativeLayout>

        <!-- 设置保存的图片的路径 -->

        <RelativeLayout
            android:id="@+id/layout_file_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_button_bottom" >

            <LinearLayout
                style="@style/setting_item_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/setting_text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_path_title" />

                <TextView
                    android:id="@+id/text_path"
                    style="@style/setting_text_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:ellipsize="start"
                    android:text="@string/setting_path_content" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@drawable/preference_right" />
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_marginTop="@dimen/setting_margin"
            android:id="@+id/layout_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_button_single" >

            <LinearLayout
                style="@style/setting_item_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/setting_text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_photo_title" />

                <TextView
                    android:id="@+id/text_path"
                    style="@style/setting_text_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_photo_content" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:src="@drawable/preference_right" />
        </RelativeLayout>
        
        <!-- 设置是否启动相机模式 -->
        <RelativeLayout
            android:layout_marginTop="@dimen/setting_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_button_top" >

            <LinearLayout
                style="@style/setting_item_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/setting_text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_camera_enable_title" />

                <TextView
                    android:id="@+id/text_camera_enable"
                    style="@style/setting_text_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />
            </LinearLayout>

            <com.huawei.game2048.custom.MySlipSwitch
                android:id="@+id/slip_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                 />
        </RelativeLayout>
        
        <!-- 设置是否启动超级2048模式 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_button_bottom" >

            <LinearLayout
                style="@style/setting_item_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/setting_text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_2048_super_title" />

                <TextView
                    android:id="@+id/text_super_enable"
                    style="@style/setting_text_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>

            <com.huawei.game2048.custom.MySlipSwitch
                android:id="@+id/slip_super"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                 />
        </RelativeLayout>
        
        
        
        
        
        
    </LinearLayout>

</ScrollView>